--- a/project.html
+++ b/project.html
@@ -42,8 +42,8 @@
 	
       <h4><b><a href="PROJECT NOT GATE.html">Project 1: NOT Gate</a></b></h4>
       <h4><b><a href="PROJECT AND GATE.html">Project 2: AND Gate</a></b></h4>
-	  <h4><b><a href="concepts.html">Project 2: AND Gate - easy version</a></b></h4>
-	  <h4><b><a href="database.html">Project 3: Binary to Hexidecimal Converter</a></b></h4>
+	  <h4><b><a href="concepts.html">Project 3: OR Gate</a></b></h4>
+	  <h4><b><a href="database.html">Project 4: XOR Gate</a></b></h4>
 	  <h4><b><a href="documentation.html">Project 4: ASCII Converter</a></b></h4>
       <h4><b><a href="aboutme.html">Project 4: UNICODE Converter</a></b></h4></li>
 	  <h4><b><a href="aboutme.html">Project 5: Machine Language Instructions Converter</a></b></h4>
