--- a/aboutme.html
+++ b/aboutme.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>About Me</title>
+<title>DEVELOPING TEAM</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 <meta charset="utf-8">
@@ -10,7 +10,7 @@
 </head>
 <body>
 <header>
-  <h1><b>About Me</b></h1>
+  <h1><b>DEV TEAM</b></h1>
 </header>
 <section>
 <nav>
@@ -23,14 +23,35 @@
       <li><h4><b><a class ="active" href="aboutme.html">Dev Team</a></b></h4></li>
     </ul>
   </nav>
-<article>
-<center><img src="foc.jpg" alt="FoC"  width="505" height="182"></center>
+  
+	<article>
+<center><img src="TEAM.jpg" alt="FoC"  width="600" height="250"></center>
    <p></p>
 <p>
-<center><img src="Profile.jpeg" alt="Profile" height="250" width="200"></center>
-<p>Hi my name is Roman Wiliams. I am currently pursing Bachelors Degree in Informationn Technology. </p></p>
-</article>
+<div class="row">
+  <div class="column" style="background-color:#aaa;">
+    <center><img src="Profile.jpeg" alt="Profile" height="250" width="200"></center>
+	<p><center><button style="width: 200px; height: 40px;" onclick=<h4><b><a href="index.html">MY WEBSITE</a></b></h4></button></p>
+	<p></p>
+	<center><img src="Profile.jpeg" alt="Profile" height="250" width="200"></center>
+	<p><center><button style="width: 200px; height: 40px;" onclick=<h4><b><a href="index.html">MY WEBSITE</a></b></h4></button></p>
+	<p></p>
+	
+	
+  </div>
+  <div class="row">
+  <div class="column" style="background-color:#bbb;">
+  <center><img src="Profile.jpeg" alt="Profile" height="250" width="200"></center>
+	<p><center><button style="width: 200px; height: 40px;" onclick=<h4><b><a href="index.html">MY WEBSITE</a></b></h4></button></p>
+	<p></p>
+	<center><img src="Profile.jpeg" alt="Profile" height="250" width="200"></center>
+	<p><center><button style="width: 200px; height: 40px;" onclick=<h4><b><a href="index.html">MY WEBSITE</a></b></h4></button></p>
+	<p></p>
+  </div>
+	</article>
 </section>
+<p></p>
+
 <footer>
   <p>@ Powered by UB and R. Williams</p>
 </footer>
