--- a/database.html
+++ b/database.html
@@ -11,7 +11,7 @@
 <body>
 
 <header>
-  <h1><b>Databases</b></h1>
+  <h1><b>DATABASE</b></h1>
 </header>
 
 <section>
@@ -27,7 +27,7 @@
   </nav>
 
   <article>
-   <center><img src="foc.jpg" alt="FoC"  width="505" height="182"></center>
+   <center><img src="DATABASE.jpg" alt="FoC"  width="600" height="250"></center>
    <p></p>
 
     <p>This course is an introduction to the fundamentals of Computer Science
