--- a/project.html
+++ b/project.html
@@ -11,7 +11,7 @@
 <body>
 
 <header>
-<h2>PROJECT</h2>
+<h2><b>PROJECT</b></h2>
   
 </header>
 
@@ -29,7 +29,7 @@
   </nav>
  
   <article>
-   <center><img src="foc.jpg" alt="FoC"  width="505" height="182"></center>
+   <center><img src="PROJECT.png" alt="FoC"  width="600" height="250"></center>
    <p></p>
 
     <center><p>The final project will consist of 4 sections. Each section has a dealine to complete.
@@ -38,15 +38,15 @@
 	See Project Specification on Moodle Site.</p></center>
     </article>
 	
-	<p>
+	<p style="background-color:tomato;">
 	
       <h4><b><a href="PROJECT NOT GATE.html">Project 1: NOT Gate</a></b></h4>
       <h4><b><a href="PROJECT AND GATE.html">Project 2: AND Gate</a></b></h4>
 	  <h4><b><a href="concepts.html">Project 3: OR Gate</a></b></h4>
 	  <h4><b><a href="database.html">Project 4: XOR Gate</a></b></h4>
-	  <h4><b><a href="documentation.html">Project 4: ASCII Converter</a></b></h4>
-      <h4><b><a href="aboutme.html">Project 4: UNICODE Converter</a></b></h4></li>
-	  <h4><b><a href="aboutme.html">Project 5: Machine Language Instructions Converter</a></b></h4>
+	  <h4><b><a href="documentation.html">Project 5: FLIP FLOP</a></b></h4>
+      <h4><b><a href="aboutme.html">Project 6: BMI CALCULATOR</a></b></h4></li>
+	  <h4><b><a href="aboutme.html">Project 7: Machine Language Instructions Converter</a></b></h4>
     </p>
 </section>
 
