--- a/project.html
+++ b/project.html
@@ -46,7 +46,7 @@
 	  <h4><b><a href="PROJECT XOR GATE.html">Project 4: XOR Gate</a></b></h4>
 	  <h4><b><a href="FLIP FLOP GATE">Project 5: FLIP FLOP</a></b></h4>
       <h4><b><a href="BMI CALCULATOR.html">Project 6: BMI CALCULATOR</a></b></h4></li>
-	  <h4><b><a href="aboutme.html">Project 7: Machine Language Instructions Converter</a></b></h4>
+	  <h4><b><a href="MACHINE LANGUAGE.html">Project 7: Machine Language Instructions Converter</a></b></h4>
     </p>
 </section>
 
