--- a/PROJECT AND GATE.html
+++ b/PROJECT AND GATE.html
@@ -18,8 +18,8 @@
   <nav>
     <ul>
       <li><h4><b><a href="index.html">Course</a></b></h4></li>
-      <li><h4><b><a href="project.html">Project</a></b></h4></li>
-	  <li><h4><b><a class ="active" href="concepts.html">Concepts</a></b></h4></li>
+      <li><h4><b><a class ="active" href="project.html">Project</a></b></h4></li>
+	  <li><h4><b><a href="concepts.html">Concepts</a></b></h4></li>
 	  <li><h4><b><a href="database.html">Databases</a></b></h4></li>
 	  <li><h4><b><a href="documentation.html">Documentation</a></b></h4></li>
       <li><h4><b><a href="aboutme.html">Dev Team</a></b></h4></li>
