--- a/PROJECT XOR GATE.html
+++ b/PROJECT XOR GATE.html
@@ -18,8 +18,8 @@
   <nav>
     <ul>
       <li><h4><b><a href="index.html">Course</a></b></h4></li>
-      <li><h4><b><a href="project.html">Project</a></b></h4></li>
-	  <li><h4><b><a class ="active" href="concepts.html">Concepts</a></b></h4></li>
+      <li><h4><b><a class ="active" href="project.html">Project</a></b></h4></li>
+	  <li><h4><b><a href="concepts.html">Concepts</a></b></h4></li>
 	  <li><h4><b><a href="database.html">Databases</a></b></h4></li>
 	  <li><h4><b><a href="documentation.html">Documentation</a></b></h4></li>
       <li><h4><b><a href="aboutme.html">Dev Team</a></b></h4></li>
@@ -43,6 +43,8 @@
 	<img id="belizeImage" src="XOR 0 & 0.png" alt="noton" width="400" height="200" align="center">
   </div>
 </div>
+</br>
+</br>
 <a href="index.html">Back to Home</a></h3>
 </section>
 </center>
