--- a/concepts.html
+++ b/concepts.html
@@ -22,7 +22,7 @@
 	  <li><h4><b><a class ="active" href="concepts.html">Concepts</a></b></h4></li>
 	  <li><h4><b><a href="database.html">Databases</a></b></h4></li>
 	  <li><h4><b><a href="documentation.html">Documentation</a></b></h4></li>
-      <li><h4><b><a href="aboutme.html">Dev Team</a></b></h4></li>
+      <li><h4><b><a href="aboutme.html">About Me</a></b></h4></li>
     </ul>
   </nav>
    
@@ -30,14 +30,31 @@
    <center><img src="foc.jpg" alt="FoC"  width="505" height="182"></center>
    <p></p>
 
-    <p>This course is an introduction to the fundamentals of Computer Science
-that will provide students with a foundation for future courses in Computer
-Science. The course is a broad survey of the discipline through topics that
-allow students to understand the capabilities of computer systems in terms
-of: the computer architecture; operating systems and computer networks;
-software and software development; data organization and visualization;
-and the potential of computing machines.</p>
+    <p>
+	<h4><b><a href="https://drive.google.com/file/d/1q903FbSHFCQZkdglDAYtgoKd3eo4SPjP/view?usp=sharing">1. Internet Addressing</a></b></h4>
+	<h4><b><a href="https://drive.google.com/file/d/1bIglbj-58DyjHIeW7XUj1ZCoOzggSyS6/view?usp=sharing">2. Class and Objects</a></b></h4>
+	
+	</p>
     </article>
+	<br>
+	
+	</br>
+	<br>
+	
+	</br>
+	<br>
+	
+	</br>
+	<br>
+	
+	</br>
+	<br>
+	
+	</br>
+	<br>
+	
+	</br>
+	
 </section>
 
 <footer>
