--- a/aboutme.html
+++ b/aboutme.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <header>
-  <h1><b>DEV TEAM</b></h1>
+  <h1><b>ABOUT ME</b></h1>
 </header>
 <section>
 <nav>
@@ -20,7 +20,7 @@
 	  <li><h4><b><a href="concepts.html">Concepts</a></b></h4></li>
 	  <li><h4><b><a href="database.html">Databases</a></b></h4></li>
 	  <li><h4><b><a href="documentation.html">Documentation</a></b></h4></li>
-      <li><h4><b><a class ="active" href="aboutme.html">Dev Team</a></b></h4></li>
+      <li><h4><b><a class ="active" href="aboutme.html">About Me</a></b></h4></li>
     </ul>
   </nav>
   
@@ -29,25 +29,19 @@
    <p></p>
 <p>
 <div class="row">
-  <div class="column" style="background-color:#aaa;">
+  <div class="column" style="background-color:#aaa ;">
     <center><img src="Profile.jpeg" alt="Profile" height="250" width="200"></center>
 	<p><center><button style="width: 200px; height: 40px;" onclick=<h4><b><a href="index.html">MY WEBSITE</a></b></h4></button></p>
-	<p></p>
-	<center><img src="Profile.jpeg" alt="Profile" height="250" width="200"></center>
-	<p><center><button style="width: 200px; height: 40px;" onclick=<h4><b><a href="index.html">MY WEBSITE</a></b></h4></button></p>
-	<p></p>
+	<p>
+	
+	Hi! My Name is Roman Williams. Iam 30 years old and pursing my Bachelors Degree in Information Technology. My hobbies are playing basket ball and Billards. 
+	
+	</p>
+	
 	
 	
   </div>
-  <div class="row">
-  <div class="column" style="background-color:#bbb;">
-  <center><img src="Profile.jpeg" alt="Profile" height="250" width="200"></center>
-	<p><center><button style="width: 200px; height: 40px;" onclick=<h4><b><a href="index.html">MY WEBSITE</a></b></h4></button></p>
-	<p></p>
-	<center><img src="Profile.jpeg" alt="Profile" height="250" width="200"></center>
-	<p><center><button style="width: 200px; height: 40px;" onclick=<h4><b><a href="index.html">MY WEBSITE</a></b></h4></button></p>
-	<p></p>
-  </div>
+ 
 	</article>
 </section>
 <p></p>
