--- a/documentation.html
+++ b/documentation.html
@@ -22,7 +22,7 @@
 	  <li><h4><b><a href="concepts.html">Concepts</a></b></h4></li>
 	  <li><h4><b><a href="database.html">Databases</a></b></h4></li>
 	  <li><h4><b><a class ="active" href="documentation.html">Documentation</a></b></h4></li>
-      <li><h4><b><a href="aboutme.html">Dev Team</a></b></h4></li>
+      <li><h4><b><a href="aboutme.html">About Me</a></b></h4></li>
     </ul>
   </nav>
  
